traffic-management/traffic-mirror/pod-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traffic-mirror-v1
spec:
  selector:
    matchLabels:
      app: traffic-mirror
      version: v1
  template:
    metadata:
      labels:
        app: traffic-mirror
        version: v1
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      serviceAccountName: default
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/frontend:v0.3.6
          ports:
          - containerPort: 8080
          readinessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/_healthz"
              port: 8080
              httpHeaders:
              - name: "Cookie"
                value: "shop_session-id=x-readiness-probe"
          livenessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/_healthz"
              port: 8080
              httpHeaders:
              - name: "Cookie"
                value: "shop_session-id=x-liveness-probe"
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: traffic-mirror
spec:
  type: ClusterIP
  selector:
    app: traffic-mirror
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
