traffic-management/traffic-mirror/pod-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traffic-mirror-v2
spec:
  selector:
    matchLabels:
      app: traffic-mirror
      version: v2
  template:
    metadata:
      labels:
        app: traffic-mirror
        version: v2
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      serviceAccountName: default
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/frontend:v0.3.6
          ports:
          - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: traffic-mirror
spec:
  type: ClusterIP
  selector:
    app: traffic-mirror
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
