traffic-management/traffic-mirror/route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mirror
spec:
  host: traffic-mirror
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
