traffic-management/traffic-mirror/svc-mirror.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mirror-ingress
spec:
  hosts:
  - "mirror.haas-495.pez.vmware.com"
  gateways:
  - frontend-gateway
  http:
  - route:
    - destination:
        host: traffic-mirror
        subset: v1
        port:
          number: 80
      weight: 100
    mirror:
      host: traffic-mirror
      subset: v2
    mirrorPercentage:
        value: 100.0
